Sub-tabs under portfolio for subjects. Using flexbox. Had issues: Basically absolute positioning took the subject-container out of the restraints of the .tab div. As a result, setting width:100% made it 100% of the entire page, pushing it off-screen. Hard to tell--portfolio is left KEY: parent div of subject-container(.tab) needs to be position:relative

--- a/WebContent/colormap.css
+++ b/WebContent/colormap.css
@@ -1,9 +1,12 @@
 @CHARSET "ISO-8859-1";
 .welcome{
-    background: #5D8649;
+    background: #A0D388;
 }
 .me{
-	background: #866150;
+	background: #EADF8B;
+}
+.portfolio{
+	background: #8BEAC7;
 }
 .cs{
 	background: #ADB0E7;
